7.0 -- Coverity analysis defect 170751: Uninitialized scalar field

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • v8.1, v8.0, v7.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/pipeline/document_source_query_stats.h:85: UNINIT_CTOR 170751 Class member declaration for "_transformIdentifiers".
      /src/mongo/db/pipeline/document_source_query_stats.h:54: UNINIT_CTOR 170751 Non-static class member "_transformIdentifiers" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Arun Banala
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: