SERVER-102224 Fix Coverity analysis defect 170751: Uninitialized scalar field (#36561)

GitOrigin-RevId: 4cb4f919c1759ac579159ce235aa76b34fb28d95