src/mongo/db/pipeline/document_source_query_stats.h
@@ -108,8 +108,6 @@ public:
             transactionNotSupported(kStageName);
         }
 
-        bool _transformIdentifiers;
-
         const TransformAlgorithmEnum _algorithm;
 
         std::string _hmacKey;
